<resources>
    <string name="app_name">Vendor Hajj Wallet</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">8FqS2oYV1aJ3xbRREYQmllFbyQm62y48gWKjyLWQ</string>
    <string name="back4app_client_key">kiNTbjmmaINu4tPyYM8DqXTZWSkycBXDA1IUFLID</string>
    <string name="hajj_wallet">Hajj Wallet</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">roger</string>
    <string name="nav_header_subtitle">roger@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_payment">Transactions</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_cashOut">Cash Out</string>
    <string name="email_address">Email Address</string>
    <string name="crn_number">CRN Number</string>
    <string name="remember_password">Remember Password</string>
    <string name="login_to_account">Login to Account</string>
    <string name="register">Register?</string>
    <string name="login">Login</string>
    <string name="sign_up_account">Sign Up Account</string>
    <string name="shop_name">Shop Name</string>
    <string name="location">Location</string>

    <string name="payments">Payments</string>
    <string name="cash_out">Cash out</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="print_it">Print it</string>
    <string name="your_generated_qr_code">Your Generated Qr Code</string>
    <string name="your_transactions">Your Transactions :</string>
    <string name="your_statistics">Your Statistics :</string>
    <string name="your_balance_is">Your Balance is</string>
    <string name="charge_wallet">Charge Wallet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="phone_number">phone_number</string>
    <string name="gender">gender M OR F </string>
    <string name="nationality">nationality</string>
    <string name="category">category</string>
    <string name="code">code vendor</string>
    <string name="password2">password2</string>
    <string name="store">store</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="get_location">Get Location</string>

    <string name="not_valid_email">Not a valid email</string>
    <string name="required_field">Required field</string>
    <string name="password_is_numbers">Password can\'t be only numbers</string>
    <string name="password_is_short">Password must be at least 8 letters</string>

    <string name="password_doesnt_match">Passwords doesn\'t match</string>
    <string name="balance">Balance</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_transactions_yet">No Transactions Yet</string>

    <string-array name="nationalities">
        <item>Egypt</item>
        <item>Saudi Arabia</item>
    </string-array>


</resources>
