<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/qrcode"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_payments"
                android:icon="@drawable/payments"
                android:title="@string/menu_payment"/>
        <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/statistics"
                android:title="@string/menu_statistics"/>
        <item
                android:id="@+id/nav_cash_out"
                android:icon="@drawable/wallet"
                android:title="@string/menu_cashOut"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="@string/menu_share"/>-->
            <!--<item-->
                    <!--android:id="@+id/nav_send"-->
                    <!--android:icon="@drawable/ic_menu_send"-->
                    <!--android:title="@string/menu_send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
