<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/myNationality"
            style="@style/InputTextField"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/email"
            android:hint="@string/nationality"/>



        <TextView
            android:id="@+id/myCategory"
            style="@style/InputTextField"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/email"
            android:hint="@string/category"/>


        <!--<EditText-->
            <!--android:id="@+id/category"-->
            <!--style="@style/InputTextField"-->
            <!--android:layout_weight="1"-->
            <!--android:drawableEnd="@drawable/email"-->
            <!--android:hint="@string/category"-->
            <!--android:inputType="text"-->
           <!--/>-->

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <EditText
            android:id="@+id/crn"
            android:layout_weight="1"
            style="@style/InputTextField"

            android:drawableEnd="@drawable/email"
            android:hint="crn 1230"
            android:inputType="number"
           />


        <EditText
            android:id="@+id/store"
            style="@style/InputTextField"
            android:drawableEnd="@drawable/email"
            android:hint="@string/store"
            android:inputType="text"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password1"
            style="@style/InputTextField"
            android:layout_weight="1"
            android:drawableEnd="@drawable/email"
            android:hint="password1 "
            android:inputType="textPassword"
           />

        <EditText
            android:layout_weight="1"
            android:id="@+id/password2"
            style="@style/InputTextField"
            android:drawableEnd="@drawable/email"
            android:hint="@string/password2"
            android:inputType="textPassword"/>




    </LinearLayout>

    <Button
        android:id="@+id/getLocation"
        style="@style/btnStyle"
        android:layout_width="match_parent"
        android:text="@string/get_location"
        android:textSize="18sp" />

    <!--<EditText-->
    <!--android:id="@+id/location"-->
    <!--style="@style/InputTextField"-->
    <!--android:layout_marginTop="32dp"-->
    <!--android:drawableEnd="@drawable/email"-->
    <!--android:hint="location"-->
    <!--android:inputType="text"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/store" />-->



</LinearLayout>